added timer, improved ui and fix exit game bug
